--- a/public/views/addDishPage/addDishPage.html
+++ b/public/views/addDishPage/addDishPage.html
@@ -14,7 +14,6 @@
     <!--CSS-->
         <link rel="stylesheet" type="text/css" href="../support/css/loader.css">
         <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
-        <link rel="stylesheet" type="text/css" href="../support/css/searchField.css">
         <link rel="stylesheet" type="text/css" href="./addDishPage.css">
 
     <!--JS-->
@@ -75,8 +74,7 @@
 
             <div class="MiddleWrapper">
                 <input class="SearchField" id="SearchBar" placeholder="Type to search" onkeyup="filter();">
-                <p class="EditButton">Edit</p>
-                <p class="AddButton">Add</p>    
+                <i class="far fa-plus-square"></i>
             </div>
         
             <div class="Dishes" id="Dishes">
