--- a/public/views/addDishPage/addDishPage.html
+++ b/public/views/addDishPage/addDishPage.html
@@ -1,93 +1,120 @@
 <html>
-    <head>
-        <title>changskitchen</title>
+
+<head>
+    <title>changskitchen</title>
 
     <!--Firebase-->
-	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
-	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
-	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
-	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-storage.js"></script>
 
     <!--JQuery-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <!--CSS-->
-        <link rel="stylesheet" type="text/css" href="../support/css/loader.css">
-        <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
-        <link rel="stylesheet" type="text/css" href="./addDishPage.css">
+    <link rel="stylesheet" type="text/css" href="../support/css/loader.css">
+    <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
+    <link rel="stylesheet" type="text/css" href="./popUpForm/popUpForm.css">
+    <link rel="stylesheet" type="text/css" href="./addDishPage.css">
 
     <!--JS-->
-        <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-        <script src="../support/js/topNavBar.js"></script>
-        <script src="../support/js/class/MenuDish.js"></script>
-        <script src="./addDishPage.js"></script>
-    
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="../support/js/topNavBar.js"></script>
+    <script src="../support/js/class/MenuDish.js"></script>
+    <script src="./popUpForm/popUpForm.js"></script>
+    <script src="./addDishPage.js"></script>
+
     <!--Prevent strangers-->
-        <script type="text/javascript">
-            firebase.auth().onAuthStateChanged(function(user) {
+    <script type="text/javascript">
+        firebase.auth().onAuthStateChanged(function(user) {
             if (!user) {
                 window.location.href = "/public/indexPage/indexPage.html";
             }
-            });
-        </script>
+        });
+    </script>
 
     <!--Canvas-->
-        <!--<link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
+    <!--<link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
         <canvas></canvas>
         <script src="../support/js/canvas.js"></script>-->
 
-    </head>
+</head>
 
-    <body onload="clickedAddDish(); load();">
+<body onload="clickedAddDish(); load();">
 
-        <div class="TopNavBar">
+    <div class="TopNavBar">
 
-            <div class="HeadingWrapper">
-                <p class="Heading">Chang's Kitchen</p>
-            </div>
-
-            <div class="Buttons"> 
-                <a class="ButtonWrapper" href="../addDishPage/addDishPage.html" id="AddDish">
-                    <p class="ButtonTitle">Add dish</p>
-                </a>
-
-                <a class="ButtonWrapper" href="../usersPage/usersPage.html" id="Users">
-                    <p class="ButtonTitle">Users</p>
-                </a>
-
-                <a class="ButtonWrapper" href="../ordersPage/ordersPage.html" id="Orders">
-                    <p class="ButtonTitle">Orders</p>
-                </a>
-
-                <a class="ButtonWrapper" href="../menuPage/menuPage.html" id="Menu">
-                    <p class="ButtonTitle">Menu</p>
-                </a>
-            </div>
-
-            <i class="fa fa-sign-out-alt" onclick="logOut();"></i>
-
+        <div class="HeadingWrapper">
+            <p class="Heading">Chang's Kitchen</p>
         </div>
 
-        <div class="MainPage">
+        <div class="Buttons">
+            <a class="ButtonWrapper" href="../addDishPage/addDishPage.html" id="AddDish">
+                <p class="ButtonTitle">Add dish</p>
+            </a>
 
-            <p class="Title">Dishes</p>
+            <a class="ButtonWrapper" href="../usersPage/usersPage.html" id="Users">
+                <p class="ButtonTitle">Users</p>
+            </a>
 
-            <div class="MiddleWrapper">
-                <input class="SearchField" id="SearchBar" placeholder="Type to search" onkeyup="filter();">
-                <i class="far fa-plus-square"></i>
-            </div>
-        
-            <div class="Dishes" id="Dishes">
-               <!--Dish will appear here-->
-            </div>
+            <a class="ButtonWrapper" href="../ordersPage/ordersPage.html" id="Orders">
+                <p class="ButtonTitle">Orders</p>
+            </a>
 
+            <a class="ButtonWrapper" href="../menuPage/menuPage.html" id="Menu">
+                <p class="ButtonTitle">Menu</p>
+            </a>
         </div>
 
-        <div class="loader-wrapper">
-            <span class="loader">
+        <i class="fa fa-sign-out-alt" onclick="logOut();"></i>
+
+    </div>
+
+    <div class="MainPage">
+
+        <p class="Title">Dishes</p>
+
+        <div class="MiddleWrapper">
+            <input class="SearchField" id="SearchBar" placeholder="Type to search" onkeyup="filter();">
+            <i class="far fa-plus-square" onclick="openForm();"></i>
+        </div>
+
+        <div class="Dishes" id="Dishes">
+            <!--Dish will appear here-->
+        </div>
+
+    </div>
+
+    <div class="form-popup" id="myForm">
+        <form class="form-container">
+            <p class="formTitle">Add Dish</p>
+
+            <input type="text" placeholder="Enter Name" id="DishName" required>
+
+            <input type="text" placeholder="Enter Price" id="DishPrice" required>
+
+            <div class="uploadImage">
+                <p id="uploadImageTitle">Choose Image</p>
+                <input type="file" id="uploadImage" name="filename">
+            </div>
+
+            <div class="containerSubmitForm" onclick="submitDish();">
+                <p class="submitForm">Submit</p>
+            </div>
+
+            <div class="containerCloseForm" onclick="closeForm();">
+                <p class="closeForm">Close</p>
+            </div>
+        </form>
+    </div>
+
+    <div class="loader-wrapper">
+        <span class="loader">
                 <span class="loader-inner"></span>
-            </span>
-        </div>
+        </span>
+    </div>
 
-    </body>
+</body>
+
 </html>
