--- a/public/views/menuPage/menuPage.css
+++ b/public/views/menuPage/menuPage.css
@@ -6,12 +6,13 @@
 .DatePicker {
     cursor: pointer;
     background-color: rgb(245, 244, 219);
-    font-size: 150%;
+    font-size: 25px;
     border: none;
     color: black;
 }
 
 .Dishes {
+    position: relative;
     float: left;
     border: 5px solid orange; border-radius: 5%; background-color: rgb(245, 244, 219);
     height: 400px; width: 300px;
@@ -20,5 +21,43 @@
 }
 
 .DishesTitle {
-    font-size: 200%;
+    color: orange;
+    margin-bottom: 20px;
+    font-size: 25px;
+}
+
+.DishName {
+    font-size: 18px;
+    width: 80%;
+    float: left;
+    margin-bottom: 10px; margin-left: 10px;
+}
+
+.far.fa-trash-alt {
+    top: 1px;
+    margin-bottom: 10px; margin-right: 10px;
+    position: relative; float: right;
+    cursor: pointer;
+    height: 20px; width: 20px; line-height: 100%;
+}
+
+.fa-trash-alt {
+    color: red;
+    font-size: 20px;
+}
+
+.AddIcon {
+    position: absolute;
+    bottom: 5px; left: 135px;
+}
+
+.far.fa-plus-square {
+    cursor: pointer;
+    height: 30px; width: 30px; line-height: 100%;
+    transform: translate(0, 18%);
+}
+
+.fa-plus-square {
+    font-size: 30px;
+    color: green;
 }
