--- a/public/views/menuPage/menuPage.html
+++ b/public/views/menuPage/menuPage.html
@@ -1,93 +1,137 @@
 <html>
-    <head>
-        <title>changskitchen</title>
 
-        <!--Firebase-->
-	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
-	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
-	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
-	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-storage.js"></script>
+<head>
+    <title>changskitchen</title>
 
-        <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
-        <link rel="stylesheet" type="text/css" href="./menuPage.css">
+    <!--JQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-        <script src="../support/js/topNavBar.js"></script>
-        <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-        <script src="./menuPage.js"></script>       
-        
-        <script type="text/javascript">
-            firebase.auth().onAuthStateChanged(function(user) {
+    <!--Firebase-->
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-storage.js"></script>
+
+    <!--CSS-->
+    <link rel="stylesheet" type="text/css" href="../support/css/loader.css">
+    <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
+    <link rel="stylesheet" type="text/css" href="./menuPage.css">
+
+    <!--JS-->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="../support/js/topNavBar.js"></script>
+    <script src="../support/js/class/MenuDish.js"></script>
+    <script src="./menuPage.js"></script>
+
+    <!--Prevent strangers-->
+    <script type="text/javascript">
+        firebase.auth().onAuthStateChanged(function (user) {
             if (!user) {
                 window.location.href = "/public/indexPage/indexPage.html";
             }
-            });
-        </script>
+        });
+    </script>
 
-        <!--Canvas-->
-        <!--<link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
+    <!--Canvas-->
+    <!--<link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
         <canvas></canvas>
         <script src="../support/js/canvas.js"></script>-->
 
-    </head>
+</head>
 
-    <body onload="clickedMenu();">
+<body onload="clickedMenu(); updateDate();">
 
-        <div class="TopNavBar">
+    <div class="TopNavBar">
 
-            <div class="HeadingWrapper">
-                <p class="Heading">Chang's Kitchen</p>
-            </div>
-
-
-            <div class="Buttons"> 
-                <a class="ButtonWrapper" href="../addDishPage/addDishPage.html" id="AddDish">
-                    <p class="ButtonTitle">Add dish</p>
-                </a>
-
-                <a class="ButtonWrapper" href="../usersPage/usersPage.html" id="Users">
-                    <p class="ButtonTitle">Users</p>
-                </a>
-
-                <a class="ButtonWrapper" href="../ordersPage/ordersPage.html" id="Orders">
-                    <p class="ButtonTitle">Orders</p>
-                </a>
-
-                <a class="ButtonWrapper" href="../menuPage/menuPage.html" id="Menu">
-                    <p class="ButtonTitle">Menu</p>
-                </a>
-            </div>
-
-            <i class="fa fa-sign-out-alt" onclick="logOut();"></i>
-
-        </div>
-
-        <div class="MainPage">
-            <div class="Menu">
-
-                <div class="MenuTitle">
-                    <p class="Title" id="currentDate">Today's Menu</p> 
-                    <input class="DatePicker" id="newDate" type="date" onblur="updateDate();">
-                </div>
-
-                <div class="Dishes">
-                    <p class="DishesTitle">Appetizer</p>
-                </div>
-
-                <div class="Dishes">
-                    <p class="DishesTitle">Soup</p>
-                </div>
-
-                <div class="Dishes">
-                    <p class="DishesTitle">Main</p>
-                </div>
-
-                <div class="Dishes">
-                    <p class="DishesTitle">Dessert</p>
-                </div>
-
-            </div>
+        <div class="HeadingWrapper">
+            <p class="Heading">Chang's Kitchen</p>
         </div>
 
 
-    </body>
+        <div class="Buttons">
+            <a class="ButtonWrapper" href="../addDishPage/addDishPage.html" id="AddDish">
+                <p class="ButtonTitle">Add dish</p>
+            </a>
+
+            <a class="ButtonWrapper" href="../usersPage/usersPage.html" id="Users">
+                <p class="ButtonTitle">Users</p>
+            </a>
+
+            <a class="ButtonWrapper" href="../ordersPage/ordersPage.html" id="Orders">
+                <p class="ButtonTitle">Orders</p>
+            </a>
+
+            <a class="ButtonWrapper" href="../menuPage/menuPage.html" id="Menu">
+                <p class="ButtonTitle">Menu</p>
+            </a>
+        </div>
+
+        <i class="fa fa-sign-out-alt" onclick="logOut();"></i>
+
+    </div>
+
+    <div class="MainPage">
+        <div class="Menu">
+
+            <div class="MenuTitle">
+                <p class="Title" id="currentDate">Today's Menu</p>
+                <input class="DatePicker" id="newDate" type="date" onblur="updateDate();">
+            </div>
+
+            <div class="Dishes">
+                <p class="DishesTitle">Appetizer</p>
+                <div class="AddIcon">
+                    <i class="far fa-plus-square"></i>
+                </div>
+
+                <div id="Appetizer">
+                    <!--Dishes will appear here-->
+                </div>
+            </div>
+
+            <div class="Dishes" id="Soup">
+                <p class="DishesTitle">Soup</p>
+                <div class="AddIcon">
+                    <i class="far fa-plus-square"></i>
+                </div>
+
+                <div id="Soup">
+                    <!--Dishes will appear here-->
+                </div>
+
+            </div>
+
+            <div class="Dishes" id="Main">
+                <p class="DishesTitle">Main</p>
+                <div class="AddIcon">
+                    <i class="far fa-plus-square"></i>
+                </div>
+
+                <div id="Main">
+                    <!--Dishes will appear here-->
+                </div>
+            </div>
+
+            <div class="Dishes" id="Dessert">
+                <p class="DishesTitle">Dessert</p>
+                <div class="AddIcon">
+                    <i class="far fa-plus-square"></i>
+                </div>
+
+                <div id="Main">
+                    <!--Dishes will appear here-->
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="loader-wrapper">
+        <span class="loader">
+            <span class="loader-inner"></span>
+        </span>
+    </div>
+
+</body>
+
 </html>
