Add delete engine

--- a/public/views/menuPage/menuPage.html
+++ b/public/views/menuPage/menuPage.html
@@ -74,7 +74,7 @@
         <div class="Menu">
 
             <div class="MenuTitle">
-                <p class="Title" id="currentDate">Today's Menu</p>
+                <p class="Title" id="currentDate">Menu</p>
                 <input class="DatePicker" id="newDate" type="date" onblur="updateDate();">
             </div>
 
